# CollegeProj-Database

./: .gitignore  README.md  clean.sh  compile.sh  dump.py  full_input_xs.txt  run.sh
docs/: design.md  milestone.md  note.txt  query_cfg.md
lite_db/: .gitignore  CMakeLists.txt
litedb_c/: CMakeLists.txt  clean  clean.sh  litedb.c  litedb.cpp  litedb.h  main.c  readme.md  second_part.txt  test.c  test.cpp
litedb_c/docs/: design.md
litedb_c/test_input/: first_part.txt  first_part_m.txt  full.txt  full_l.txt  full_l2.txt  full_m.txt  full_xs.txt  full_xxxs.txt  join_manual.txt  part_l.txt  queries.txt  second_part.txt
litedb_c/test_input/join/: B.csv
litedb_py/: litedb.py
src/src/: main.c
submit/: compile.sh  litedb.c  litedb.cpp  main.cpp  run.sh
